# petcare_project

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .zshrc  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  README.md  deploy.sh  docker-compose.prod.yml  docker-compose.yml  entrypoint.prod.sh  entrypoint.sh  manage.py  mypy.ini  nginx.conf  nginx.dev.conf  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  rollback.sh
.antigravity/: rules.md
.devcontainer/: devcontainer.json  docker-compose.yml
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md  STAGING_DEPLOYMENT.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.admin.config.ts  vite.config.ts
frontend/src/: App.tsx  admin-calendar.tsx
frontend/src/components/: AdminCalendar.css  AdminCalendar.tsx  MetricsCard.tsx  RevenueChart.tsx  TopProductsTable.tsx
frontend/src/services/: api.ts
frontend/src/types/: dashboard.ts
scripts/: README.md  build-frontend.sh  demo_scheduling_agent.py  deploy-dashboard-safe.sh  deploy-dashboard.sh  rollback-dashboard.sh
src/: conftest.py
src/apps/accounts/: admin.py  api.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
src/apps/ai/: README.md  __init__.py  admin.py  apps.py  models.py  services.py
src/apps/analytics/: apps.py  serializers.py  services.py  urls.py  views.py
src/apps/core/: apps.py  views.py
src/apps/health/: admin.py  apps.py  factories.py  models.py  serializers.py  urls.py  views.py
src/apps/pets/: admin.py  apps.py  factories.py  forms.py  models.py  serializers.py  urls.py  views.py
src/apps/schedule/: admin.py  apps.py  factories.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/apps/store/: admin.py  apps.py  factories.py  forms.py  models.py  serializers.py  services.py  tasks.py  urls.py  views.py
src/petcare/: asgi.py  celery.py  permissions.py  schema.py  settings.py  urls.py  wsgi.py
src/petcare/tests/: test_permissions.py  test_schema.py
src/static/js/: schedule_admin.js  (+1 more)
(+87 files in other folders)
