[project]
name = "petcare"
version = "0.1.0"
description = "Sistema de Gestão para Pet Shops"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0",
    "djangorestframework",
    "django-cors-headers",
    "django-filter",
    "dj-database-url",
    "psycopg2-binary",
    "gunicorn",
    "whitenoise",
    "python-decouple",
    "structlog",
    "celery",
    "faker",
    "factory-boy",
    "redis",
    "django-celery-beat",
    "drf-spectacular",
    "django-allauth",
    "dj-rest-auth",
    "pillow",
    "requests",
    "requests-oauthlib",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-django",
    "pytest-cov",
    "pytest-mock",
    "ruff",
    "mypy",
    "django-stubs",
    "djangorestframework-stubs",
    "bandit",
    "safety",
    "pre-commit"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
indent-width = 4
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "src.petcare.settings"
python_files = "tests.py test_*.py *_tests.py"
pythonpath = ["."]
addopts = "--tb=short --cov --cov-report=term-missing"

[tool.coverage.run]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "src/manage.py",
    "src/petcare/settings.py",
    "src/petcare/wsgi.py",
    "src/petcare/asgi.py",
    "src/petcare/celery.py",
    "src/conftest.py",
    "*/__init__.py",
    "*/apps.py",
]

[tool.bandit]
exclude_dirs = [".venv", "tests", ".git", "dist"]
skips = ["B101", "B106", "B311"]

[tool.bandit.sideload]
